properly set target release and source compatibility for all packages: do not use Gradle toolchains as toolchains do not work reliably when building on Windows ARM yet